@@ -6,6 +6,7 @@ History for IMDBPHP2
 v2.2.3
 -------------------
 * some cleanup to imdb::plot_split
+* IMDB site updates hit us again. Fixed: imdb::awards()
 
 v2.2.2 (02.12.2013)
 -------------------
